# the-agent-company

./: .env  .env.example  .gitignore  README.md  evaluation_results.txt  main.py  ngrok.yml  process_attendance.py  project_tasks.txt  projects.json  pyproject.toml  read_image.py  requirements.txt  run.sh
docs/: IMPLEMENTATION.md  TESTING_GUIDE.md
scripts/: check_api_server.py  check_services.py  fix_api_server.sh  quick_start_ngrok.sh  start_agents.sh  start_agents_for_ngrok.sh  start_all_agents.sh  start_green_agent.sh  start_ngrok.sh  start_ngrok_separate.sh  start_white_agent.sh  wait_for_api_server.sh
src/: __init__.py  launcher.py
src/data/: 2024-03-attendance-summary.xlsx  add_precomputed_trajectory.py  precompute_task_data.py  sample_trajectory.json  task_instructions.json  trajectory_collector.py
src/green_agent/: agent.py  green_agent.toml
src/green_agent/evaluation/: __init__.py  evaluation_function.py  evaluator.py  scoring.py  task_selector.py
src/utils/: a2a_client.py  docker_manager.py  tag_parser.py
src/white_agent/: __init__.py  agent.py
